styling and spacing fixed, layout of main page nearly done

--- a/src/app/component/project-preview-card/project-preview-card.component.css
+++ b/src/app/component/project-preview-card/project-preview-card.component.css
@@ -1,4 +1,5 @@
 .projectCard {
+  
     width: 180px;
     height: 210px;
     text-align: center;
@@ -9,3 +10,7 @@
     width: 200;
   }
 
+.mat-card{
+  margin-top: 20px;
+  margin-left: 50px;
+}
